Fixed alignment issues

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@
     padding-left: 1rem;
     padding-top: 1rem;
     position: relative;
-    top: 0;
+    margin-top: 10%;
     height: 100%;
 }
 
